added docs and a test for GET all requirements
