# docs/swagger.json
@@ -312,6 +312,39 @@
             }
         },
         "/requirement": {
+            "get": {
+                "description": "Get requirements paged response",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Requirement"
+                ],
+                "summary": "Get requirements",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "description": "token for next page",
+                        "name": "nextToken",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/requirements.GetAllRequirementsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
             "post": {
                 "description": "Create a single requirement",
                 "consumes": [
@@ -612,6 +645,20 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "requirements.GetAllRequirementsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ent.Requirement"
+                    }
+                },
+                "nextToken": {
                     "type": "string"
                 }
             }
